estilos header CSS

--- a/Trabajo clase/Trabajo clase/Index.html
+++ b/Trabajo clase/Trabajo clase/Index.html
@@ -10,12 +10,10 @@
 
     <header class="header">
         <nav class="nav">
-            <ul class="nav__list">
-                <li><a href="#" class="nav__list__link--decoration">Home</a></li>
-                <li><a href="#" class="nav__list__link--decoration">Services</a></li>
-                <li><a href="#" class="nav__list__link--decoration">About</a></li>
-                <li><a href="#" class="nav__list__link--decoration">Contact</a></li>
-            </ul>
+                <a href="#" class="nav__list__link--decoration">Home</a>
+                <a href="#" class="nav__list__link--decoration">Services</a>
+                <a href="#" class="nav__list__link--decoration">About</a>
+                <a href="#" class="nav__list__link--decoration">Contact</a>
         </nav>
 
         <div class="header__text__container">
